--- a/project/static/style.css
+++ b/project/static/style.css
@@ -385,7 +385,9 @@ iframe {
 }
 
 
-
+.draggable-list li.over .draggable {
+  background-color: #eaeaea;
+}
 
 
 /*==========================Rating Stars Module======================*/
