--- a/templates/workshop/edit_subject.html
+++ b/templates/workshop/edit_subject.html
@@ -26,6 +26,10 @@
     </div>
 
     {% else %}
+<a href="{% url 'edit_all' subject.id %}" style="text-decoration: none">
+    Edit ALL
+</a>
+
 
     <!-- ======================Sending Course to Server============================== -->
     <div class="row p-3">
